--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-PORT=3000
-HOST=http://localhost:3000/swords
+PORT=https://pacific-journey-6911.herokuapp.com
+HOST=http://localhost:8080/swords
 MONGOLAB_URI=localhost/swords
